<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.webcontrol.app.siteparserfinal.MainActivity"
    android:clickable="false"
    android:background="@color/material_blue_grey_800"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_bt"
        android:id="@+id/btStart"
        android:enabled="false"
        android:layout_below="@+id/titleSite"
        android:layout_centerHorizontal="true" />
    <RadioGroup android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rgSearcher">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            android:id="@+id/bannerAd">
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/interstitial_ad_unit_id2"
                android:layout_gravity="center_horizontal">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>

            <RadioGroup android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgSearcherFirstLine"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <RadioButton
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="Google"
                    android:id="@+id/radioGoogle"
                    android:singleLine="false"
                    android:textColor="#A9F5F2"/>
                <RadioButton
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="Bing"
                    android:id="@+id/radioBing"
                    android:textColor="#A9F5F2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aol"
                    android:id="@+id/radioAol"
                    android:textColor="#A9F5F2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ask"
                    android:id="@+id/radioAsk"
                    android:textColor="#A9F5F2"
                    android:visibility="invisible"/>
            </RadioGroup>
            <RadioGroup android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgSearcherSecondLine"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <RadioButton
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="Yandex"
                    android:id="@+id/radioYandex"
                    android:textColor="#A9F5F2"/>
                <RadioButton
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="Baidu"
                    android:id="@+id/radioBaidu"
                    android:textColor="#A9F5F2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="YahooJp"
                    android:id="@+id/radioYahooJp"
                    android:textColor="#A9F5F2"/>
            </RadioGroup>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linLayout1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rgSearcher"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/siteUrl"
            android:fadeScrollbars="true"
            android:hint="@string/edit_textUrl"
            android:inputType="textUri"
            android:textColor="#A9F5F2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_bt"
            android:id="@+id/historyM" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_viewTKw"
        android:id="@+id/titleSite"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linLayout1"
        android:layout_alignParentLeft="true"
        android:textColor="#A9F5F2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_bt"
        android:id="@+id/button_title"
        android:nestedScrollingEnabled="false"
        android:enabled="true"
        android:layout_below="@+id/titleSite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="16dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/stepET"
        android:layout_centerHorizontal="true"

        android:id="@+id/frameLayout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textResult1"
            android:layout_gravity="left|top"
            android:textColor="#FFF"
            android:textSize="17dp" />

    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_bt"
        android:id="@+id/siteData"
        android:layout_alignTop="@+id/btStart"
        android:layout_alignRight="@+id/frameLayout"
        android:layout_alignEnd="@+id/frameLayout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:id="@+id/stepET"
        android:layout_below="@+id/btStart"
        android:layout_toRightOf="@+id/step"
        android:layout_toEndOf="@+id/step"
        android:text="100"
        android:textColor="#A9F5F2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_viewStep"
        android:id="@+id/step"
        android:layout_alignBaseline="@+id/stepET"
        android:layout_alignBottom="@+id/stepET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#A9F5F2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

</RelativeLayout>
