<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.webcontrol.app.siteparserfinal.AolParser">

    <Button
        android:id="@+id/parseA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Получить данные"
        android:layout_alignRight="@+id/listViewDataA"
        android:layout_alignEnd="@+id/listViewDataA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#333333"
        android:textColor="#acacac" />
    <ListView
        android:id="@+id/listViewDataA"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@+id/parseA"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Count"
        android:id="@+id/countA"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listViewDataA"
        android:layout_alignEnd="@+id/listViewDataA" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_bt"
        android:id="@+id/historyA"
        android:layout_below="@+id/parseA"
        android:layout_alignRight="@+id/listViewDataA"
        android:layout_alignEnd="@+id/listViewDataA"
        android:background="#333333"
        android:textColor="#acacac"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Page: 1"
        android:id="@+id/pageA"
        android:layout_above="@+id/countA"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Result: "
        android:id="@+id/resultA"
        android:visibility="invisible"

        android:layout_above="@+id/listViewDataA"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/error_message"
        android:id="@+id/errorView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_bt"
        android:id="@+id/errorBt"
        android:layout_below="@+id/errorView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>
