<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.webcontrol.app.siteparserfinal.AskParser">

    <Button
        android:id="@+id/parseAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Получить данные"
        android:layout_alignRight="@+id/listViewDataAsk"
        android:layout_alignEnd="@+id/listViewDataAsk"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#333333"
        android:textColor="#acacac" />
    <ListView
        android:id="@+id/listViewDataAsk"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@+id/parseAsk"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Count"
        android:id="@+id/countAsk"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listViewDataAsk"
        android:layout_alignEnd="@+id/listViewDataAsk"
        android:textColor="#0062b2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_bt"
        android:id="@+id/historyAsk"
        android:layout_below="@+id/parseAsk"
        android:layout_alignRight="@+id/listViewDataAsk"
        android:layout_alignEnd="@+id/listViewDataAsk"
        android:background="#c00"
        android:textColor="#ffffff"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Page: 1"
        android:id="@+id/pageAsk"
        android:layout_above="@+id/countAsk"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#0062b2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Result: "
        android:id="@+id/resultAsk"
        android:visibility="invisible"
        android:textColor="#0062b2"
        android:layout_above="@+id/listViewDataAsk"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/error_message"
        android:id="@+id/errorView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_bt"
        android:id="@+id/errorBt"
        android:layout_below="@+id/errorView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>
